Salvando uma unidae com sucesso.

--- a/cursoApp/app/src/main/AndroidManifest.xml
+++ b/cursoApp/app/src/main/AndroidManifest.xml
@@ -9,15 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ActivityTurma"></activity>
-        <activity android:name=".activities.ActivityUnidade" />
+
+        <activity
+            android:name=".activities.ActivityUnidade"
+            android:label="Cadastrar Unidade"
+            />
+        <activity
+            android:name=".activities.ActivityTurma"
+            android:label="Cadastrar Turma"
+            />
+        <activity
+            android:name=".activities.ActivityListarUnidades"
+            android:label="Listar Unidades"
+            />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
