integrando com o fb.

--- a/HelloWorldFireBase/app/src/main/AndroidManifest.xml
+++ b/HelloWorldFireBase/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.franca.cursoapp">
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="br.com.franca.helloworldfirebase">
 
     <application
         android:allowBackup="true"
@@ -10,19 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ActivityEditarUnidade"></activity>
-        <activity
-            android:name=".activities.ActivityUnidade"
-            android:label="Cadastrar Unidade" />
-        <activity
-            android:name=".activities.ActivityTurma"
-            android:label="Cadastrar Turma" />
-        <activity
-            android:name=".activities.ActivityListarUnidades"
-            android:label="Listar Unidades" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
